<resources>
    <string name="app_name">ChooseYourMatch</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="height">height</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="country">country</string>
    <string name="decline">decline</string>
    <string name="accept">Accept</string>
    <string name="mobile">mobile no</string>
    <string name="gender">gender</string>
    <string name="error">Error message</string>
</resources>