<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/layout_margin_16dp"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:paddingTop="@dimen/layout_padding_top"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/cardView_width"
                android:layout_height="@dimen/cardView_height"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/left_right_padding"
                android:paddingRight="@dimen/left_right_padding">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tv_fullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_margin"
                        android:text="@string/age"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/tv_mobile_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_margin"
                        android:text="@string/mobile"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_margin"
                        android:text="@string/gender"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_margin"
                        android:text="@string/city"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

            <!-- Buttons -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/layout_margin">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_decline"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/decline"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/medium_text_size"
                    app:icon="@drawable/ic_decline"
                    app:iconTint="@color/grey" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_accept"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/accept"
                    android:textColor="@color/green"
                    android:textSize="@dimen/medium_text_size"
                    app:icon="@drawable/ic_tick_mark"
                    app:iconTint="@color/green" />
            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>